v3/crates/metadata-resolve/tests/failing/model_permissions/nested_array/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/nested_array/metadata.json
---
Error: Error in model permission for model 'institutions (in subgraph default)' for role 'admin': in select filter permissions: field 'staff' of type 'institution (in subgraph default)' is an array type and cannot be used in a nested field predicate
    ╭─[ <unknown>:18:36 ]
    │
 14 │                 "role": "admin",
    │                         ───┬───  
    │                            ╰───── Error in model permission for the role 'admin' on the model 'institutions'
    │ 
 18 │                       "fieldName": "staff",
    │                                    ───┬───  
    │                                       ╰───── This field is an array type and cannot be used in a nested field predicate
────╯
